fixed overflow

--- a/automotrizBGMQ/src/app/components/perfil/perfil.component.scss
+++ b/automotrizBGMQ/src/app/components/perfil/perfil.component.scss
@@ -174,7 +174,6 @@
     background-color: $blanco;
     justify-content: space-around;
     text-align: center;
-    overflow-x: hidden;
 
     #title-citas{
       background-color: $detalles;
